projects overflowing right bug fixed

--- a/css/main.css
+++ b/css/main.css
@@ -86,12 +86,12 @@ table {
 
 section {
   height: 80vh;
+  min-height: 590px;
   border-top: 1px white solid;
   border-bottom: 1px white solid;
 }
 
 body {
-  /* background-image: url("../img/milky_way.jpg"); */
   background-position: center; /* Center the image */
   background-size: cover;
   background-color: black;
